# Backend

./: .gitignore  README.md  testing using postman.md
.github/workflows/: ci.yml
devops/: ci.gocd.yaml  dev14-cd.gocd.yaml  dev14.values.yaml
devops/kubs-on-local/: Dockerfile  README.md  k8s-manifest.yaml  package-lock.json  package.json  server.js
golang/: Makefile  README.md  go.mod  go.sum  main.go  precommit.sh
golang/handlers/: messageHandler.go
golang/kafka/: producer.go
golang/middleware/: middleware.go
golang/routes/: routes.go
grpc-nestjs/: grpc-test.postman_collection.json  nest-cli.json  package-lock.json  package.json
nest-graphql/: README.md  graphql.postman_collection.json  package-lock.json  package.json  schema.gql
nestJs/: .gitignore  Dockerfile  README.md  jest-e2e.json  jest-func.json  jest.config.js  package.json
npm-package/: .releaserc  README.md  package.json
product-docs/: notification-service-PRD.md
pyspark/: Dockerfile  Makefile  README.md  athena_queries.sql  build_script_vm.sh  config.json  emr-instance-based-on-load.json
python/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  download_model.py  generate_openapi.py  openapi.json  pyproject.toml
python/app/: main.py
python/app/api/v1/: endpoints.py
python/app/core/: config.py
python/app/models/: recommendation.py
python/app/services/: model_loader.py  recommender.py
python/app/services/strategies/: base.py  dummy.py
python/tests/integration/: test_api.py
python/tests/unit/: test_strategies.py
(+18 files in other folders)
